fix perk spacing

--- a/src/app.css
+++ b/src/app.css
@@ -1534,7 +1534,7 @@ html.fonts-ready #root {
 }
 
 .public-character-perk + .public-character-perk {
-  margin-top: 8px;
+  margin-top: 20px;
 }
 
 .public-character-perk-link,
